# unillm

./: .gitignore  CMakeLists.txt  README.md  mkdocs.yml
.github/workflows/: docs.yml
docs/: Doxyfile  api-guide.md  build_docs.sh  configuration.md  getting-started.md  index.md  releases.md
docs/api/: doxygen.md  index.md  public-headers.md
docs/examples/: basic.md  nvidia-nim-contact-parser.md
docs/stylesheets/: extra.css
examples/: basic.cpp  nvidia_nim_contact_parser.cpp
include/unillm/: providers.hpp  proxy.hpp  unillm.hpp
modules/: unillm.cppm  unillm.providers.cppm  unillm.proxy.cppm
src/core/: curl_transport.cpp  providers.cpp  unillm.cpp
src/core/internal/: http.hpp  json.hpp  providers.hpp  toml.hpp
src/proxy/: main.cpp  proxy.cpp
tests/integration/: test_proxy.cpp
tests/unit/: test_core.cpp
